Changed MdField create/edit dialog to be fixed 400px tall w/ scrollbars
git-svn-id: https://subversion.assembla.com/svn/mdss@6481 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: ad29fd795c59001d26b11712b2269d6b23c2c2ba [formerly 6bc70af6fdccf4b4927a94d04d1e86af12aa2624]
Former-commit-id: 9f2d3ee4a8cf7ced8e68ffc34ef1c2944139c2e7

--- a/trunk/webapp/css/style.css
+++ b/trunk/webapp/css/style.css
@@ -1275,6 +1275,11 @@ span.currentPage a:active {
 .form-button-add:hover {
   background-position: 0px -50px;
 }
+.form-dialog-scroll dl {
+	height: 400px;
+	overflow: auto;
+	padding: 8px;
+}
 .form-gen-available-pages {
 	margin: 0 1em;
   cursor: pointer;
